--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,25 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--menu -->
+    <string name="shop">خرید</string>
+    <string name="user">پروفایل</string>
+    <string name="home">خانه</string>
+    <string name="orchard">باغ ها</string>
+
+    <string-array name="pistachio_types">
+        <item>اکبری</item>
+        <item>احمد آقایی</item>
+        <item>شاهپسند</item>
+        <item>خنجری</item>
+        <item>اوحدی</item>
+        <item>کله قوچی</item>
+        <item>پیترز</item>
+        <item>رد آلپو</item>
+        <item>کرمان</item>
+    </string-array>
+
 </resources>
