Add Activities:  - Irrigation screen  - Fertilization screen  - ViewModel  - Navigation  - NavGraph

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     </string-array>
     <string name="title_activity_add_user">AddUserActivity</string>
     <string name="title_activity_add_activities">AddActivities</string>
+    <string name="title_activity_irrigation">IrrigationActivity</string>
 
 
 </resources>
