Add Activities:  - gardens profile activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="title_activity_irrigation">IrrigationActivity</string>
     <string name="title_activity_add_garden">AddGarden</string>
     <string name="title_activity_maps">MapsActivity</string>
+    <string name="title_activity_garden_profile">GardenProfileActivity</string>
 
 
 </resources>
